--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 [dependencies]
 # CLI
 clap = { version = "4.4", features = ["derive"] }
+clap_complete = "4.4"
 
 # AST Parsing with Oxc
 oxc_parser = "0.32"
@@ -41,6 +42,7 @@ rayon = "1.8"
 # String utilities
 once_cell = "1.19"
 lazy_static = "1.4"
+regex = "1.10"
 
 # Output formatting
 colored = "2.0"
