--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             artifact_name: windwarden
             asset_name: windwarden-linux-x86_64
-          - os: ubuntu-24.04-arm
-            target: aarch64-unknown-linux-gnu
-            artifact_name: windwarden
-            asset_name: windwarden-linux-aarch64
+          # - os: ubuntu-24.04-arm
+          #   target: aarch64-unknown-linux-gnu
+          #   artifact_name: windwarden
+          #   asset_name: windwarden-linux-aarch64
 
           # macOS
           - os: macos-13
@@ -222,7 +222,7 @@ jobs:
           prerelease: ${{ needs.check-release.outputs.is-prerelease == 'true' }}
           files: |
             artifacts/windwarden-linux-x86_64/windwarden
-            artifacts/windwarden-linux-aarch64/windwarden
+            # artifacts/windwarden-linux-aarch64/windwarden
             artifacts/windwarden-macos-x86_64/windwarden
             artifacts/windwarden-macos-aarch64/windwarden
         env:
